--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+/* @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap'); */
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -17,6 +17,7 @@
 }
 
 body {
+  /* font-family: 'Inter', sans-serif; */
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -28,3 +29,10 @@ body {
     )
     rgb(var(--background-start-rgb)); */
 }
+.box-shadow-bottom{
+  box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.25);
+}
+.box-shadow-top{
+  box-shadow: 2px 0px 6px 0px rgba(0, 0, 0, 0.25);
+}
+
