--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,13 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
-
+@layer base {
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+}
 body {
   /* font-family: 'Inter', sans-serif; */
   margin: 0;
